Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122412

Buggy rendering on RHEL 8 with 200% system scaling

    XMLWordPrintable

Details

    • Linux/Wayland
    • 97b9b165c (dev), 0617262d8 (6.7), 63102ae3b (6.6)

    Description

      I've got it with Qt 6.6.2 on Rocky Linux 8.9 to be precise. It looks like the application is rendered at 100% scaling while the system has 200% scaling, the window accepts input coordinates scaled twice relative to the actual window size (i.e. it's rendered as 100% but input events are still 200%), the content updates partially (at least with widgets, not sure about qml) and this should be reproducible with any Qt example. If I set QT_WAYLAND_DISABLED_INTERFACES=wp_viewporter, the bug disappears. My guess the bug is caused by the lack of setting buffer scale when viewporter is active.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidedmundson David Edmundson
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes